--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 21
+        uses: oracle-actions/setup-java@v1
         with:
-          java-version: "17"
-          distribution: "temurin"
-          cache: maven
+          website: jdk.java.net
+          release: 21
+          version: latest
 
       - name: Start Selenium Docker Grid setup
         run: docker-compose -f "docker-compose.yml" up -d --build
