--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,9 +2,9 @@ name: Selenium Java Architecture Skeleton
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
@@ -12,24 +12,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 21
-        uses: oracle-actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          website: jdk.java.net
-          release: 21
-          version: latest
+          distribution: "temurin"
+          java-version: "21"
+          cache: "maven"
 
       - name: Start Selenium Docker Grid setup
         run: docker-compose -f "docker-compose.yml" up -d --build
 
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots clean compile
+        run: mvn -B package --file pom.xml
+
       - name: Run the tests
         run: mvn test
