--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,6 +20,11 @@ jobs:
           java-version: "21"
           cache: "maven"
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.7/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Start Selenium Docker Grid setup
         run: docker-compose -f "docker-compose.yml" up -d --build
 
