--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,40 @@
-# To execute this docker-compose yml file use `docker-compose -f docker-compose.yml up`
-# Add the `-d` flag at the end for detached execution
-# To stop the execution, hit Ctrl+C, and then `docker-compose -f docker-compose.yml down`
 services:
   selenium-event-bus:
-    image: selenium/event-bus:4.26.0-20241101
+    image: selenium/event-bus:4.27.0-20241127
     container_name: selenium-event-bus
+    environment:
+      - SE_ENABLE_TRACING=false
     ports:
-      - "4442:4442"
-      - "4443:4443"
-      - "5557:5557"
+      - '4442:4442'
+      - '4443:4443'
+      - '5557:5557'
 
   selenium-sessions:
-    image: selenium/sessions:4.26.0-20241101
+    image: selenium/sessions:4.27.0-20241127
     container_name: selenium-sessions
     ports:
-      - "5556:5556"
+      - '5556:5556'
     depends_on:
       - selenium-event-bus
     environment:
       - SE_EVENT_BUS_HOST=selenium-event-bus
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_ENABLE_TRACING=false
 
   selenium-session-queue:
-    image: selenium/session-queue:4.26.0-20241101
+    image: selenium/session-queue:4.27.0-20241127
     container_name: selenium-session-queue
-    ports:
-      - "5559:5559"
-    depends_on:
-      - selenium-event-bus
     environment:
-      - SE_EVENT_BUS_HOST=selenium-event-bus
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_ENABLE_TRACING=false
+    ports:
+      - '5559:5559'
 
   selenium-distributor:
-    image: selenium/distributor:4.26.0-20241101
+    image: selenium/distributor:4.27.0-20241127
     container_name: selenium-distributor
     ports:
-      - "5553:5553"
+      - '5553:5553'
     depends_on:
       - selenium-event-bus
       - selenium-sessions
@@ -51,12 +47,13 @@ services:
       - SE_SESSIONS_MAP_PORT=5556
       - SE_SESSION_QUEUE_HOST=selenium-session-queue
       - SE_SESSION_QUEUE_PORT=5559
+      - SE_ENABLE_TRACING=false
 
   selenium-router:
-    image: selenium/router:4.26.0-20241101
+    image: selenium/router:4.27.0-20241127
     container_name: selenium-router
     ports:
-      - "4444:4444"
+      - '4444:4444'
     depends_on:
       - selenium-distributor
       - selenium-sessions
@@ -68,9 +65,10 @@ services:
       - SE_SESSIONS_MAP_PORT=5556
       - SE_SESSION_QUEUE_HOST=selenium-session-queue
       - SE_SESSION_QUEUE_PORT=5559
+      - SE_ENABLE_TRACING=false
 
   chrome:
-    image: selenium/node-chrome:4.26.0-20241101
+    image: selenium/node-chrome:4.27.0-20241127
     shm_size: 2gb
     depends_on:
       - selenium-event-bus
@@ -78,9 +76,10 @@ services:
       - SE_EVENT_BUS_HOST=selenium-event-bus
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_ENABLE_TRACING=false
 
   edge:
-    image: selenium/node-edge:4.26.0-20241101
+    image: selenium/node-edge:4.27.0-20241127
     shm_size: 2gb
     depends_on:
       - selenium-event-bus
@@ -88,9 +87,10 @@ services:
       - SE_EVENT_BUS_HOST=selenium-event-bus
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_ENABLE_TRACING=false
 
   firefox:
-    image: selenium/node-firefox:4.26.0-20241101
+    image: selenium/node-firefox:4.27.0-20241127
     shm_size: 2gb
     depends_on:
       - selenium-event-bus
@@ -98,3 +98,4 @@ services:
       - SE_EVENT_BUS_HOST=selenium-event-bus
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_ENABLE_TRACING=false
