--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.release>21</maven.compiler.release>
         <!--Dependency
         Versions-->
-        <assertj-core.version>3.27.3</assertj-core.version>
+        <assertj-core.version>4.0.0-M1</assertj-core.version>
         <commons-configuration2.version>2.12.0</commons-configuration2.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <jackson.version>2.19.0</jackson.version>
